# djangorestframework-inclusions

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: check_sphinx.py  index.rst  quickstart.rst
rest_framework_inclusions/: __init__.py  apps.py  core.py  data_inclusion.py  renderer.py
testapp/: loaders.py  models.py  renderers.py  serializers.py  settings.py  urls.py  viewsets.py
tests/: mixins.py  test_basic.py  test_chained_loading.py  test_references.py
