# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = djangorestframework_inclusions
version = 0.1
description = A DRF renderer to side-load relations
long_description = file: README.rst
url = https://github.com/isprojects/djangorestframework-inclusions
license = MIT
author = ISProjects B.V., Sergei Maertens
author_email = info@isprojects.nl
keywords = API, REST, lazy loading, django, djangorestframework
classifiers =
    Development Status :: 5 - Stable/Production
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    djangorestframework
tests_require =
    pytest
    pytest-django
    tox
    isort
    black

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
    black
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
not_skip = __init__.py
known_django=django
known_first_party=rest_framework_inclusions
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc

[zest.releaser]
create-wheel = yes
