# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = djangorestframework-inclusions
version = 1.2.1
description = A DRF renderer to side-load relations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isprojects/djangorestframework-inclusions
license = MIT
author = ISPnext B.V., Sergei Maertens
author_email = support@ispnext.com
keywords = API, REST, lazy loading, django, djangorestframework
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    djangorestframework
tests_require =
    pytest
    pytest-django
    tox
    isort
    black

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
    black
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    zest.releaser

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
known_django=django
known_first_party=rest_framework_inclusions
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
max-line-length=120
exclude=env,.tox,doc

[flake8]
max-line-length=120
exclude=env,.tox,doc

[zest.releaser]
create-wheel = yes
